Fix metronome back link alignment to match other apps

--- a/src/pages/MetronomeApp/MetronomeApp.module.css
+++ b/src/pages/MetronomeApp/MetronomeApp.module.css
@@ -5,7 +5,14 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .beatRow {
